--- a/PlantAlarm.iOS/PlantAlarm.iOS.csproj
+++ b/PlantAlarm.iOS/PlantAlarm.iOS.csproj
@@ -74,6 +74,7 @@
     <Compile Include="CustomRenderers\CalendarDayViewCellRenderer_iOS.cs" />
     <Compile Include="CustomRenderers\BorderlessDatePickerRenderer_iOS.cs" />
     <Compile Include="CustomRenderers\BorderlessTimePickerRenderer_iOS.cs" />
+    <Compile Include="DependencyServices\TextInputModal_iOS.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
