--- a/PlantAlarm.Android/PlantAlarm.Android.csproj
+++ b/PlantAlarm.Android/PlantAlarm.Android.csproj
@@ -63,6 +63,9 @@
     <PackageReference Include="Xam.Plugins.Notifier">
       <Version>3.0.1</Version>
     </PackageReference>
+    <PackageReference Include="TouchTracking.Forms">
+      <Version>1.1.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
