Progress on settings page + Tasks page

--- a/PlantAlarm.Android/PlantAlarm.Android.csproj
+++ b/PlantAlarm.Android/PlantAlarm.Android.csproj
@@ -51,7 +51,7 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.1.0.581479" />
+    <PackageReference Include="Xamarin.Forms" Version="4.1.0.673156" />
     <PackageReference Include="Xamarin.Android.Support.Design" Version="28.0.0.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="28.0.0.1" />
     <PackageReference Include="Xamarin.Android.Support.v4" Version="28.0.0.1" />
@@ -115,6 +115,12 @@
     <AndroidResource Include="Resources\drawable-xhdpi\RightArrowBlack.png" />
     <AndroidResource Include="Resources\drawable-hdpi\RightArrowBlack.png" />
     <AndroidResource Include="Resources\drawable\RightArrowBlack.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\RecurringIconGold.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\RecurringIconGold.png" />
+    <AndroidResource Include="Resources\drawable\RecurringIconGold.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\AlertRed.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\AlertRed.png" />
+    <AndroidResource Include="Resources\drawable\AlertRed.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
