--- a/PlantAlarm/PlantAlarm.csproj
+++ b/PlantAlarm/PlantAlarm.csproj
@@ -11,8 +11,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.1.0.581479" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
+    <PackageReference Include="Xamarin.Forms" Version="4.1.0.673156" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.2.0" />
     <PackageReference Include="Xam.Plugin.Media" Version="4.0.1.5" />
     <PackageReference Include="sqlite-net-pcl" Version="1.5.231" />
     <PackageReference Include="SkiaSharp.Views.Forms" Version="1.68.0" />
@@ -29,6 +29,8 @@
     <Folder Include="Interfaces\" />
     <Folder Include="Effects\" />
     <Folder Include="Helpers\" />
+    <Folder Include="Behaviors\" />
+    <Folder Include="Enums\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Services\NotificationService\Notification.cs" />
