--- a/PlantAlarm.iOS/PlantAlarm.iOS.csproj
+++ b/PlantAlarm.iOS/PlantAlarm.iOS.csproj
@@ -152,8 +152,8 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.1.0.673156" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.2.0" />
+    <PackageReference Include="Xamarin.Forms" Version="4.3.0.778476-pre1" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.3.0" />
     <PackageReference Include="TouchTracking.Forms">
       <Version>1.1.0</Version>
     </PackageReference>
@@ -172,6 +172,11 @@
     <ProjectReference Include="..\PlantAlarm\PlantAlarm.csproj">
       <Project>{FF13C1A0-7E4A-4202-8C6D-10655753A369}</Project>
       <Name>PlantAlarm</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PlantAlarm.WatchOS\PlantAlarm.WatchOS.WatchOSApp\PlantAlarm.WatchOS.WatchOSApp.csproj">
+      <IsWatchApp>true</IsWatchApp>
+      <Project>{8C23CDA8-C656-4523-99CD-80EF9FF77717}</Project>
+      <Name>PlantAlarm.WatchOS.WatchOSApp</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
