--- a/PlantAlarm.iOS/PlantAlarm.iOS.csproj
+++ b/PlantAlarm.iOS/PlantAlarm.iOS.csproj
@@ -148,6 +148,10 @@
     <ImageAsset Include="Assets.xcassets\ShareIcon.imageset\icons8-upload.png" />
     <ImageAsset Include="Assets.xcassets\ShareIcon.imageset\icons8-upload-1.png" />
     <ImageAsset Include="Assets.xcassets\ShareIcon.imageset\icons8-upload-2.png" />
+    <ImageAsset Include="Assets.xcassets\AddButtonGreen.imageset\Contents.json" />
+    <ImageAsset Include="Assets.xcassets\AddButtonGreen.imageset\icons8-add_filled-3.png" />
+    <ImageAsset Include="Assets.xcassets\AddButtonGreen.imageset\icons8-add_filled-2.png" />
+    <ImageAsset Include="Assets.xcassets\AddButtonGreen.imageset\icons8-add_filled-1.png" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -165,9 +169,6 @@
     </PackageReference>
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.5.231</Version>
-    </PackageReference>
-    <PackageReference Include="SkiaSharp.Views.Forms">
-      <Version>1.68.0</Version>
     </PackageReference>
     <PackageReference Include="Xam.Plugin.Media">
       <Version>4.0.1.5</Version>
@@ -195,5 +196,6 @@
     <Folder Include="Assets.xcassets\AlertRed.imageset\" />
     <Folder Include="Assets.xcassets\QuestionIcon.imageset\" />
     <Folder Include="Assets.xcassets\ShareIcon.imageset\" />
+    <Folder Include="Assets.xcassets\AddButtonGreen.imageset\" />
   </ItemGroup>
 </Project>
