--- a/PlantAlarm.iOS/PlantAlarm.iOS.csproj
+++ b/PlantAlarm.iOS/PlantAlarm.iOS.csproj
@@ -152,6 +152,14 @@
     <ImageAsset Include="Assets.xcassets\AddButtonGreen.imageset\icons8-add_filled-3.png" />
     <ImageAsset Include="Assets.xcassets\AddButtonGreen.imageset\icons8-add_filled-2.png" />
     <ImageAsset Include="Assets.xcassets\AddButtonGreen.imageset\icons8-add_filled-1.png" />
+    <ImageAsset Include="Assets.xcassets\WarningYellow.imageset\Contents.json" />
+    <ImageAsset Include="Assets.xcassets\WarningYellow.imageset\icons8-error_filled.png" />
+    <ImageAsset Include="Assets.xcassets\WarningYellow.imageset\icons8-error_filled-1.png" />
+    <ImageAsset Include="Assets.xcassets\WarningYellow.imageset\icons8-error_filled-2.png" />
+    <ImageAsset Include="Assets.xcassets\TickGreen.imageset\Contents.json" />
+    <ImageAsset Include="Assets.xcassets\TickGreen.imageset\icons8-checked_checkbox_filled.png" />
+    <ImageAsset Include="Assets.xcassets\TickGreen.imageset\icons8-checked_checkbox_filled-1.png" />
+    <ImageAsset Include="Assets.xcassets\TickGreen.imageset\icons8-checked_checkbox_filled-2.png" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -197,5 +205,7 @@
     <Folder Include="Assets.xcassets\QuestionIcon.imageset\" />
     <Folder Include="Assets.xcassets\ShareIcon.imageset\" />
     <Folder Include="Assets.xcassets\AddButtonGreen.imageset\" />
+    <Folder Include="Assets.xcassets\WarningYellow.imageset\" />
+    <Folder Include="Assets.xcassets\TickGreen.imageset\" />
   </ItemGroup>
 </Project>
