--- a/PlantAlarm.iOS/PlantAlarm.iOS.csproj
+++ b/PlantAlarm.iOS/PlantAlarm.iOS.csproj
@@ -83,6 +83,8 @@
     <Compile Include="CustomRenderers\GradientStackLayoutRenderer_iOS.cs" />
     <Compile Include="CustomRenderers\ShadowLayoutRenderer_iOS.cs" />
     <Compile Include="DependencyServices\MediaManagementService_iOS.cs" />
+    <Compile Include="Effects\SafeAreaEffect_iOS.cs" />
+    <Compile Include="Effects\NotchEqualizerForColViewsEffect_iOS.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
@@ -173,7 +175,7 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.3.0.819712-pre2" />
+    <PackageReference Include="Xamarin.Forms" Version="4.3.0.851321-pre3" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.0" />
     <PackageReference Include="TouchTracking.Forms">
       <Version>1.1.0</Version>
