--- a/PlantAlarm.iOS/PlantAlarm.iOS.csproj
+++ b/PlantAlarm.iOS/PlantAlarm.iOS.csproj
@@ -27,7 +27,7 @@
     <MtouchArch>x86_64</MtouchArch>
     <MtouchLink>None</MtouchLink>
     <MtouchDebug>true</MtouchDebug>
-    <CodesignProvision>iOS Team Provisioning Profile: *</CodesignProvision>
+    <CodesignProvision>EBUniApps - PlantAlarm</CodesignProvision>
     <CodesignKey>Apple Development: Balzs Erdsz (JWSX6AV586)</CodesignKey>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
@@ -53,8 +53,9 @@
     <CodesignKey>Apple Development: Balzs Erdsz (JWSX6AV586)</CodesignKey>
     <MtouchDebug>true</MtouchDebug>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
-    <CodesignProvision>iOS Team Provisioning Profile: *</CodesignProvision>
+    <CodesignProvision>EBUniApps - PlantAlarm</CodesignProvision>
     <MtouchLink>None</MtouchLink>
+    <DeviceSpecificBuild>false</DeviceSpecificBuild>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>none</DebugType>
@@ -88,6 +89,8 @@
     <Compile Include="Effects\SafeAreaEffect_iOS.cs" />
     <Compile Include="Effects\NotchEqualizerForColViewsEffect_iOS.cs" />
     <Compile Include="Effects\OverlappingEffect_iOS.cs" />
+    <Compile Include="DependencyServices\AppReviewService_iOS.cs" />
+    <None Include="PrivacyPolicy.txt" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
