--- a/PlantAlarm.iOS/PlantAlarm.iOS.csproj
+++ b/PlantAlarm.iOS/PlantAlarm.iOS.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Effects\OverlappingEffect_iOS.cs" />
     <Compile Include="DependencyServices\AppReviewService_iOS.cs" />
     <None Include="PrivacyPolicy.txt" />
+    <None Include="Info %28copy%29.plist" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
